--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
         });
     })();
     </script>
-    <script src="/js/email.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="js/email.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
