--- a/navbar.html
+++ b/navbar.html
@@ -14,12 +14,12 @@
     </div>
     <div class="navbar">
         <ul class="links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/skills.html">Skills</a></li>
-            <li><a href="/contact.html">Contact Me</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </div>
-    <script src="/js/navbar.js"></script>
+    <script src="js/navbar.js"></script>
 </body>
 </html>
