--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 target="_blank">
                 <div class="box">
                     <h4>Resume</h4>
-                    <img src="assets/logo/external.png" alt="">
+                    <img src="assets/external.png" alt="">
                 </div>
             </a>
         </div>
@@ -35,19 +35,19 @@
     <div class="sub">
             <div class="socials">
                 <a href="https://www.linkedin.com/in/singh-pradyut/" target="_blank">
-                    <img src="assets/logo/linkedin.png" alt="">
+                    <img src="assets/linkedin.png" alt="">
                 </a>
                 <a href="https://github.com/Pradyut-Singh" target="_blank">
-                    <img src="assets/logo/github.png" alt="">
+                    <img src="assets/github.png" alt="">
                 </a>
                 <a href="https://www.instagram.com/_pradyut_singh_/" target="_blank">
-                    <img src="assets/logo/insta.png" alt="">
+                    <img src="assets/insta.png" alt="">
                 </a>
                 <a href="https://x.com/Pradyut_28?t=ADBiAkwu-s33Lr73d1kbhQ&s=09" target="_blank">
-                    <img src="assets/logo/twitter.png" alt="">
+                    <img src="assets/twitter.png" alt="">
                 </a>
                 <a href="mailto:pradyutsingh05@gmail.com" target="_blank">
-                    <img src="assets/logo/gmail.png" alt="">
+                    <img src="assets/gmail.png" alt="">
                 </a>
             </div>
     </div>
