--- a/skills.html
+++ b/skills.html
@@ -15,24 +15,24 @@
                 <h1>PROGRAMMING</h1>
                 <div class="images">
                     <div class="progressBar">
-                        <img src="assets/logo/c.png" alt="">
+                        <img src="assets/c.png" alt="">
                         <div class="progress"><div class="circle" style="margin-left: 70%;"></div></div>
                     </div>
                     <div class="progressBar">
-                        <img src="assets/logo/c++.png" alt="">
+                        <img src="assets/c++.png" alt="">
                         <div class="progress"><div class="circle" style="margin-left: 50%;"></div></div>
                     </div>
                     <div class="progressBar">
-                        <img src="assets/logo/python.png" alt="">
+                        <img src="assets/python.png" alt="">
                         <div class="progress"><div class="circle" style="margin-left: 60%;"></div></div>
                     </div>
 
                     <div class="progressBar">
-                        <img src="assets/logo/web.png" alt="">
+                        <img src="assets/web.png" alt="">
                         <div class="progress"><div class="circle" style="margin-left: 80%;"></div></div>
                     </div>
                     <div class="progressBar">
-                        <img src="assets/logo/flutter.png" alt="">
+                        <img src="assets/flutter.png" alt="">
                         <div class="progress"><div class="circle" style="margin-left: 40%;"></div></div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                         <a href="https://www.doi.org/10.58532/V3BKIT3P6CH2" target="_blank">
                             <div class="box">
                                 <h4>Read Paper</h4>
-                                <img src="assets/logo/external.png" alt="">
+                                <img src="assets/external.png" alt="">
                             </div>
                         </a>
                     </div>
